# line-stamp-maker

./: .gitignore  DEVELOPMENT.md  QUICKSTART.md  README.md  handwriting_test_results.txt  mapping.csv  pyproject.toml  requirements.txt
line_stamp_maker/: __init__.py  __main__.py  color.py  config.py  face_detection.py  image_processor.py  io.py  mapping.py  mask.py  render.py  segmentation.py  sticker.py  text.py  text_renderer.py  utils.py
line_stamp_maker/assets/: __init__.py
line_stamp_maker/assets/fonts/: __init__.py
scripts/: download_fonts.ps1  download_fonts.py  download_handwriting_fonts.py
tests/: __init__.py  conftest.py  test_color.py  test_error_reporting.py  test_imports.py  test_io.py  test_mapping.py  test_mask.py  test_mask_component.py  test_preflight.py  test_render_debug.py  test_sticker.py  test_text_bubble.py  test_text_wrap.py
